// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: element transform > props merging: class 1`] = `
"
  const n0 = _createComponent(Foo, { class: () => (["foo", { bar: isBar }]) })
  return n0
"
`;

exports[`compiler: element transform > props merging: style 1`] = `
"
  const n0 = _createComponent(Foo, { style: () => (["color: green", { color: 'red' }]) })
  return n0
"
`;
